--- a/Themes/theme1.conf
+++ b/Themes/theme1.conf
@@ -13,13 +13,13 @@ FontSize=""
 KeyboardSize="0.4"
 #  Default 0.4, Options 0.1-1.0
 
-RoundCorners="20"
+RoundCorners="5"
 
 Locale=""
 # Locale for data and time format. I suggest leaving it blank.
-HourFormat="HH:mm"
+HourFormat="HH:mm:ss"
 # Default Locale.ShortFormat.
-DateFormat="dddd d MMMM"
+#DateFormat="dddd d MMMM"
 # Default Locale.LongFormat.
 
 HeaderText=""
@@ -27,7 +27,7 @@ HeaderText=""
 
 #################### Background ####################
 
-Background="Backgrounds/1.png"
+Background="Backgrounds/2.png"
 # Must be relative path.
 DimBackground="0.0"
 # Options: 0.0-1.0.
@@ -46,9 +46,9 @@ BackgroundVerticalAlignment="center"
 
 #################### Colors ####################
 
-HighlightColor="#343746"
+HighlightColor="#1a1a1a"
 # Main color.
-BackgroundColor="#21222C"
+BackgroundColor="#C4A000"
 # Background color.
 # Connected with: HaveFormBackground
 TextColor="#ffffff"
@@ -57,7 +57,7 @@ PlaceholderColor="#bbbbbb"
 SystemButtonsIconColor="#F8F8F2"
 # System icon colors.
 
-HighlightTextColor="#b7cef1"
+HighlightTextColor="#ffffff"
 # Overrides HighlightColor.
 LoginButtonTextColor=""
 # Overrides TextColor.
@@ -65,12 +65,12 @@ LoginButtonBackgroundColor=""
 # Overrides HighlightColor.
 BackgroundListColor=""
 # Overrides BackgroundColor.
-HoverSessionAndVirtualKeyboard="#b7cef1"
+HoverSessionAndVirtualKeyboard="#B8A200"
 # Overrides HighlightColor.
 
 #################### Form ####################
 
-PartialBlur="true"
+PartialBlur=""
 # Default false.
 FullBlur=""
 # Default false.
@@ -95,7 +95,7 @@ VirtualKeyboardPosition="center"
 
 #################### Interface Behavior ####################
 
-HideVirtualKeyboard="false"
+HideVirtualKeyboard="true"
 HideSystemButtons="false"
 HideLoginButton="true"
 
